<resources>
    <string name="app_name">Movies Database</string>
    <string name="title_activity_movies_main">Movies</string>
    <string name="search_hint">Search Database.....</string>
    <string name="order_by_rating">Order by Rating</string>
    <string name="order_by_popularity">Order by Popularity</string>
    <string name="uh_oh_something_went_wrong">Uh-Oh! Something went wrong</string>
    <string name="released">Released</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="watch_movie">Watch Full Movie</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="player_error">error</string>
    <string name="play_movie">play movie</string>
    <string name="title_activity_movie_reviews">MovieReviewsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>