<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/poster_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/poster_iv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintBottom_toTopOf="@id/watch_trailer_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/db_logo_foreground" />

    <ImageButton
        android:id="@+id/watch_trailer_btn"
        android:background="@color/colorAccent"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/play_trailer"
        app:layout_constraintBottom_toTopOf="@id/watch_movie_btn"
        app:layout_constraintEnd_toStartOf="@id/watch_trailer_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/poster_iv"
        app:srcCompat="@drawable/play" />

    <TextView
        android:id="@+id/watch_trailer_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/watch_trailer"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/watch_trailer_btn"
        app:layout_constraintBottom_toBottomOf="@id/watch_trailer_btn"
        app:layout_constraintTop_toTopOf="@id/watch_trailer_btn" />

    <ImageButton
        android:id="@+id/watch_movie_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/play_movie"
        app:layout_constraintBottom_toBottomOf="@id/poster_layout"
        app:layout_constraintEnd_toEndOf="@id/watch_trailer_btn"
        app:layout_constraintStart_toStartOf="@id/watch_trailer_btn"
        app:layout_constraintTop_toBottomOf="@id/watch_trailer_btn"
        app:srcCompat="@drawable/play" />

    <TextView
        android:id="@+id/watch_movie_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/watch_movie"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/watch_trailer_tv"
        app:layout_constraintTop_toTopOf="@id/watch_movie_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>
